Promotions more visible & minor fix in single SL & MySqlDump

--- a/css/general.css
+++ b/css/general.css
@@ -418,7 +418,7 @@ a .thumbnail:hover{
 	border-width: 1.5px;
 }
 
-.devicepromotion{
+.promotion-item{
 	border-color: #ff3c1a;
 }
 
